issue fixing regarding operation other things
